add db comunications

--- a/task2/src/main/resources/application.properties
+++ b/task2/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.jpa.hibernate.ddl-auto=update
 # Dzięki tej linijce Hibernate utworzy poprawnie klucze obce w MySQL'u
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+
+log4j.logger.org.hibernate=INFO, hb
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type=TRACE
+
+log4j.appender.hb=org.apache.log4j.ConsoleAppender
+log4j.appender.hb.layout=org.apache.log4j.PatternLayout
