--- a/task2/src/main/resources/application.properties
+++ b/task2/src/main/resources/application.properties
@@ -7,8 +7,8 @@ trello.app.login=psobow
 
 #DB
 spring.datasource.url=jdbc:mysql://localhost:3306/example_crud?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=user_example_crud
-spring.datasource.password=123
+spring.datasource.username=pwruser
+spring.datasource.password=pwruser
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
